--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "bullmq": "^5.61.0",
+    "concurrently": "^9.2.1",
     "express": "^5.1.0",
     "ioredis": "^5.8.1"
   }
