--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,7 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-  }
+  },
+  "exclude": ["node_modules"],
+  "include": ["./src/**/*.ts"]
 }
