--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bullmq": "^5.61.0",
     "concurrently": "^9.2.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "ioredis": "^5.8.1"
   }
