--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild" : "npx eslint . --fix ",
     "build": "npx tsc",
     "watch": "npx tsc -w",
     "prestart": "npm run build",
@@ -18,6 +19,10 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/ioredis": "^4.28.10",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
+    "eslint": "^9.37.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "nodemon": "^3.1.10",
     "typescript": "^5.9.3"
   },
