--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,11 @@
     // File Layout
     // "rootDir": "./src",
      "outDir": "./dist",
-      "esModuleInterop": true,
+    "esModuleInterop": true,
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
-    "target": "esnext",
+    "module": "commonjs",
+    "target": "es2016",
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
@@ -35,7 +35,7 @@
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
+    //"verbatimModuleSyntax": true,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
