integrated Bull Board in the project

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prebuild" : "npx eslint . --fix ",
+    "prebuild": "npx eslint . --fix ",
     "build": "npx tsc",
     "watch": "npx tsc -w",
     "prestart": "npm run build",
@@ -27,6 +27,9 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@bull-board/api": "^6.13.1",
+    "@bull-board/express": "^6.13.1",
+    "bull-board": "^1.2.0",
     "bullmq": "^5.61.0",
     "concurrently": "^9.2.1",
     "dotenv": "^17.2.3",
