--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codechamp-problemevaluator-service",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "type": ".cjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "npx eslint . --fix ",
@@ -17,14 +17,17 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@types/express": "^5.0.3",
     "@types/ioredis": "^4.28.10",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
-    "eslint": "^9.37.0",
+    "eslint": "^9.38.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^16.4.0",
     "nodemon": "^3.1.10",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2"
   },
   "dependencies": {
     "@bull-board/api": "^6.13.1",
@@ -34,6 +37,7 @@
     "concurrently": "^9.2.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "ioredis": "^5.8.1"
+    "ioredis": "^5.8.1",
+    "zod": "^4.1.12"
   }
 }
